@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.36) unstable; urgency=low
 
   * http-client: fixed NULL pointer dereference
+  * handler, response: removed duplicate request body destruction calls
 
  --
 
